--- a/index.html
+++ b/index.html
@@ -42,4 +42,6 @@
                                         <p>Fate has brought us here to face. Our hopes and dreams erased. Either kill or be killed.</p> </div> 
                                         <div class="slide__img"><div class="slide__img-inner" style="background-image:url(5.95d97ae8.jpg)"></div></div> </div> </div> </div> 
                                         <div class="cursor"> <span class="cursor__text" data-splitting="">+ Discover more</span> </div> </main> 
-                                        <script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script> <script type="module" src="index.e9a2d1b4.js"></script><script src="index.b5e7c14d.js" nomodule="" defer></script> </body></html>
+                                        <script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script> <script type="module" src="index.e9a2d1b4.js"></script><script src="index.b5e7c14d.js" nomodule="" defer></script> 
+    </body>
+</html>
